tests/unit/snapshots/unit__unit__tui_snapshot_test__snapshot_tests__family_config_with_price.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: buffer_str
---
OAP Konfigurator - Drehstuhl se:air - Konfiguration                                                 
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Drehstuhl se:air - Konfiguration ────────────────────────┐┌ Code ────────────────────────────────┐
│── Polsterung ──────────────────────────────              ││Artikel:      AI-121                  │
│▶ Stoffgruppe    * = Preisgruppe 3       [2 Optionen]     ││Variante:     S_FUSSFARBE=119;S_STOFF=│
│                                                          ││                                      │
│── Gestell ──────────────────────────────                 │└──────────────────────────────────────┘
│  Fussfarbe      * = Schwarz             [2 Optionen]     │┌ Information ─────────────────────────┐
│                                                          ││Sedus se:air                          │
│                                                          ││Drehstuhl                             │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          │└──────────────────────────────────────┘
│                                                          │┌ Stoffgruppe ─────────────────────────┐
│                                                          ││● Preisgruppe 3                       │
│                                                          ││○ Preisgruppe 4                       │
│                                                          ││                                      │
│                                                          ││←→ Wert ändern                        │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
↑↓: Eigenschaft | ←→: Wert ändern | e: Export | Esc: Zurück
