tests/unit/snapshots/unit__unit__tui_snapshot_test__snapshot_tests__family_config_with_surcharges.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: buffer_str
---
OAP Konfigurator - Drehstuhl se:air - Konfiguration                                                 
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Drehstuhl se:air - Konfiguration ────────────────────────┐┌ Code ────────────────────────────────┐
│── Polsterung ──────────────────────────────              ││Artikel:      AI-121                  │
│▶ Gabriel Stoff  * = Gabriel Comfort 166 [1 Optionen]     ││Variante:     S_STOFF_FRONT_GABRIEL=XS│
│                                                          ││                                      │
│                                                          │└──────────────────────────────────────┘
│                                                          │┌ Information ─────────────────────────┐
│                                                          ││Sedus se:air                          │
│                                                          ││Drehstuhl                             │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          │└──────────────────────────────────────┘
│                                                          │┌ Gabriel Stoff ───────────────────────┐
│                                                          ││● Gabriel Comfort 166                 │
│                                                          ││                                      │
│                                                          ││←→ Wert ändern                        │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
↑↓: Eigenschaft | ←→: Wert ändern | e: Export | Esc: Zurück
