tests/unit/snapshots/unit__unit__tui_snapshot_test__snapshot_tests__family_list.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: buffer_str
---
OAP Konfigurator - Sedus - Produktfamilien                                      
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌ Sedus - Produktfamilien (2, 1 konfigurierbar) ───────────────────────────────┐
│▶ ⚙ ai           Drehstuhl se:air (5 Art.)                                    │
│  ○ ap           Konferenzstuhl ap (3 Art.)                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
↑↓: Navigation | Enter: Auswählen | /: Suchen | q: Beend
