tests/unit/snapshots/unit__unit__tui_snapshot_test__snapshot_tests__help_screen.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: buffer_str
---
OAP Konfigurator - Hilfe                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌ Hilfe ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  OAP Konfigurator - Tastaturkürzel                                           │
│                                                                              │
│  Navigation:                                                                 │
│    ↑/↓       In Liste navigieren                                             │
│    Enter     Auswählen / Öffnen                                              │
│    Esc       Zurück / Schließen                                              │
│    Tab       Nächste Eigenschaft                                             │
│    Shift+Tab Vorherige Eigenschaft                                           │
│                                                                              │
│  Aktionen:                                                                   │
│    /         Suche starten                                                   │
│    d         Preisdatum setzen                                               │
│    e         Konfiguration exportieren                                       │
│    ?         Diese Hilfe anzeigen                                            │
│    q         Programm beenden                                                │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
Esc: Zurück
