tests/unit/snapshots/unit__unit__tui_snapshot_test__snapshot_tests__search_mode_active.snap
---
source: tests/unit/tui_snapshot_test.rs
expression: buffer_str
---
OAP Konfigurator - Hersteller                                                   
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌Suche─────────────────────────────────────────────────────────────────────────┐
│Suche: vitra                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Hersteller (3) ──────────────────────────────────────────────────────────────┐
│▶ sex          Sedus                                                          │
│  vitra        Vitra                                                          │
│  kn           Knoll                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
Esc: Suche beenden | Enter: Auswählen
